check errors for var and vhar documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 S3method(AIC,varlse)
 S3method(BIC,varlse)
+S3method(HQ,varlse)
 S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
+S3method(is.stable,varlse)
 S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,summary.varlse)
@@ -13,22 +15,29 @@ S3method(print,varlse)
 S3method(print,vharlse)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
+S3method(stableroot,varlse)
 S3method(summary,varlse)
 export("%>%")
 export()
+export(FPE)
+export(HQ)
 export(build_design)
 export(build_y0)
 export(compute_var)
 export(estimate_har)
 export(estimate_var)
+export(is.stable)
 export(knit_print.summary.varlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
 export(kroneckerprod)
 export(scale_har)
+export(stableroot)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(data.table,last)
 importFrom(magrittr,"%>%")
+importFrom(stats,AIC)
+importFrom(stats,BIC)
 useDynLib(bvhar)
