--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: bvhar
 Type: Package
 Title: Bayesian VHAR model
-Version: 0.1
+Version: 0.0.0.9000
 Date: 2021-08-01
 Authors@R: person("Young Geun", "Kim", email = "dudrms33@g.skku.edu", role = c("aut", "cre"))
 Maintainers@R: person("Young Geun", "Kim", email = "dudrms33@g.skku.edu", role = c("aut", "cre"))
 Description: Beta package to
         model VAR, VHAR, BVAR, and Bayesian VHAR.
 License: MIT + file LICENSE
+URL: https://github.com/ygeunkim/bvhar
+BugReports: https://github.com/ygeunkim/bvhar/issues
 Suggests: 
+    dplyr,
     knitr,
     rmarkdown,
     tinytest
