--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,12 @@ Type: Package
 Title: Bayesian VHAR model
 Version: 0.0.0.9000
 Date: 2021-08-01
-Authors@R: person("Young Geun", "Kim", email = "dudrms33@g.skku.edu", role = c("aut", "cre"))
-Maintainers@R: person("Young Geun", "Kim", email = "dudrms33@g.skku.edu", role = c("aut", "cre"))
+Authors@R: c(
+    person("Young Geun", "Kim", email = "dudrms33@g.skku.edu", role = c("aut", "cre")),
+    person("Changryong", "Baek", role = "ctb")
+    )
 Description: Beta package to
-        model VAR, VHAR, BVAR, and Bayesian VHAR.
+    model VAR, VHAR, BVAR, and Bayesian VHAR.
 License: MIT + file LICENSE
 URL: https://github.com/ygeunkim/bvhar
 BugReports: https://github.com/ygeunkim/bvhar/issues
