add simple ghosh prior feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ S3method(coefficients,vharlse)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(is.stable,varlse)
+S3method(predict,bvarghosh)
 S3method(predict,bvarmn)
 S3method(predict,bvharmn)
 S3method(predict,varlse)
 S3method(predict,vharlse)
+S3method(print,bvarghosh)
 S3method(print,bvarmn)
 S3method(print,bvharmn)
 S3method(print,summary.varlse)
@@ -30,14 +32,17 @@ export(build_design)
 export(build_xdummy)
 export(build_y0)
 export(build_ydummy)
+export(bvar_ghosh)
 export(bvar_minnesota)
 export(bvhar_minnesota)
 export(compute_var)
 export(diag_misc)
+export(estimate_bvar_ghosh)
 export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_var)
 export(is.stable)
+export(knit_print.bvarghosh)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
 export(knit_print.summary.varlse)
