--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
+S3method(gen_posterior,bvarmn)
 S3method(is.stable,varlse)
 S3method(predict,bvarghosh)
 S3method(predict,bvarmn)
@@ -36,11 +37,13 @@ export(bvar_ghosh)
 export(bvar_minnesota)
 export(bvhar_minnesota)
 export(compute_var)
+export(concatenate_colnames)
 export(diag_misc)
 export(estimate_bvar_ghosh)
 export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_var)
+export(gen_posterior)
 export(is.stable)
 export(knit_print.bvarghosh)
 export(knit_print.bvarmn)
@@ -57,6 +60,8 @@ export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(data.table,last)
 importFrom(magrittr,"%>%")
+importFrom(mniw,rmniw)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 useDynLib(bvhar)
+useDynLib(bvhar, .registration = TRUE)
