autoplot density of matrix normal mean matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(AIC,varlse)
 S3method(BIC,varlse)
 S3method(HQ,varlse)
+S3method(autoplot,minnesota)
 S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
 S3method(fitted,varlse)
@@ -29,6 +30,8 @@ export()
 export(AAt_eigen)
 export(FPE)
 export(HQ)
+export(autolayer)
+export(autoplot)
 export(build_design)
 export(build_xdummy)
 export(build_y0)
@@ -59,9 +62,21 @@ export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(data.table,last)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,autoplot)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
 importFrom(magrittr,"%>%")
 importFrom(mniw,rmniw)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_longer)
 useDynLib(bvhar)
 useDynLib(bvhar, .registration = TRUE)
