--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,6 @@ License: MIT + file LICENSE
 URL: https://github.com/ygeunkim/bvhar
 BugReports: https://github.com/ygeunkim/bvhar/issues
 Suggests: 
-    dplyr,
     knitr,
     rmarkdown,
     tinytest
@@ -29,7 +28,11 @@ Imports:
     data.table,
     magrittr,
     Rcpp (>= 1.0.7),
-    mniw
+    mniw,
+    ggplot2,
+    tidyr,
+    tibble,
+    dplyr
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
