convert var coefficient as infinite vma

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ S3method(AIC,varlse)
 S3method(BIC,varlse)
 S3method(HQ,varlse)
 S3method(autoplot,minnesota)
+S3method(coefficients,bvarmn)
 S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
+S3method(fitted,bvarmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(gen_posterior,bvarmn)
@@ -21,6 +23,7 @@ S3method(print,bvharmn)
 S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
+S3method(residuals,bvarmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
 S3method(stableroot,varlse)
@@ -30,6 +33,7 @@ export()
 export(AAt_eigen)
 export(FPE)
 export(HQ)
+export(VARtoVMA)
 export(autolayer)
 export(autoplot)
 export(build_design)
@@ -46,6 +50,7 @@ export(estimate_bvar_ghosh)
 export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_var)
+export(forecast_region)
 export(gen_posterior)
 export(is.stable)
 export(knit_print.bvarghosh)
