forecast var with rcppeigen and compute cov in varlm function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,7 @@ export(build_ydummy)
 export(bvar_ghosh)
 export(bvar_minnesota)
 export(bvhar_minnesota)
-export(compute_var)
+export(compute_cov)
 export(concatenate_colnames)
 export(diag_misc)
 export(estimate_bvar_ghosh)
@@ -51,6 +51,7 @@ export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_var)
 export(forecast_region)
+export(forecast_var)
 export(gen_posterior)
 export(is.stable)
 export(knit_print.bvarghosh)
