forecast vhar in rcppeigen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(estimate_har)
 export(estimate_var)
 export(forecast_region)
 export(forecast_var)
+export(forecast_vhar)
 export(gen_posterior)
 export(is.stable)
 export(knit_print.bvarghosh)
