change ghosh rcpp function name and compute iw shape

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,8 +46,8 @@ export(bvhar_minnesota)
 export(compute_cov)
 export(concatenate_colnames)
 export(diag_misc)
-export(estimate_bvar_ghosh)
 export(estimate_bvar_mn)
+export(estimate_ghosh_mn)
 export(estimate_har)
 export(estimate_var)
 export(forecast_region)
