write predict function of bvarmn bvharmn bvarghosh using rcppeigen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,9 @@ export(estimate_bvar_mn)
 export(estimate_ghosh_mn)
 export(estimate_har)
 export(estimate_var)
+export(forecast_bvarghosh)
+export(forecast_bvarmn)
+export(forecast_bvharmn)
 export(forecast_region)
 export(forecast_var)
 export(forecast_vhar)
@@ -68,7 +71,6 @@ export(stableroot)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
-importFrom(data.table,last)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
