--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(AIC,varlse)
 S3method(BIC,varlse)
 S3method(HQ,varlse)
+S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
 S3method(coefficients,bvarmn)
 S3method(coefficients,varlse)
@@ -78,6 +79,7 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
