add new minnesota prior feature for bvhar function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(build_design)
 export(build_xdummy)
 export(build_y0)
 export(build_ydummy)
+export(build_ydummy_bvhar)
 export(bvar_ghosh)
 export(bvar_minnesota)
 export(bvhar_minnesota)
