--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(BIC,varlse)
 S3method(HQ,varlse)
 S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
+S3method(autoplot,predbvhar)
 S3method(coefficients,bvarmn)
 S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
@@ -21,6 +22,7 @@ S3method(predict,vharlse)
 S3method(print,bvarghosh)
 S3method(print,bvarmn)
 S3method(print,bvharmn)
+S3method(print,predbvhar)
 S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
@@ -63,6 +65,7 @@ export(is.stable)
 export(knit_print.bvarghosh)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
+export(knit_print.predbvhar)
 export(knit_print.summary.varlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
@@ -73,6 +76,9 @@ export(stableroot)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
@@ -81,6 +87,7 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
