add inheritance for varlse vharlse bvarmn bvarghosh bvharmn predbvhar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
 S3method(autoplot,predbvhar)
 S3method(coefficients,bvarmn)
+S3method(coefficients,bvharmn)
 S3method(coefficients,varlse)
 S3method(coefficients,vharlse)
 S3method(fitted,bvarmn)
+S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(gen_posterior,bvarmn)
@@ -27,6 +29,7 @@ S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
 S3method(residuals,bvarmn)
+S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
 S3method(stableroot,varlse)
@@ -61,7 +64,13 @@ export(forecast_region)
 export(forecast_var)
 export(forecast_vhar)
 export(gen_posterior)
+export(is.bvarghosh)
+export(is.bvarmn)
+export(is.bvharmn)
+export(is.predbvhar)
 export(is.stable)
+export(is.varlse)
+export(is.vharlse)
 export(knit_print.bvarghosh)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
