update documents to return lists of varlse vharlse bvarmn bvharmn ghosh

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ S3method(HQ,varlse)
 S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
 S3method(autoplot,predbvhar)
-S3method(coefficients,bvarmn)
-S3method(coefficients,bvharmn)
-S3method(coefficients,varlse)
-S3method(coefficients,vharlse)
+S3method(coef,bvarghosh)
+S3method(coef,bvarmn)
+S3method(coef,bvharmn)
+S3method(coef,varlse)
+S3method(coef,vharlse)
+S3method(fitted,bvarghosh)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
@@ -28,6 +30,7 @@ S3method(print,predbvhar)
 S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
+S3method(residuals,bvarghosh)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
@@ -47,15 +50,16 @@ export(build_xdummy)
 export(build_y0)
 export(build_ydummy)
 export(build_ydummy_bvhar)
-export(bvar_ghosh)
+export(bvar_flat)
 export(bvar_minnesota)
+export(bvar_mixture)
 export(bvhar_minnesota)
 export(compute_cov)
 export(concatenate_colnames)
 export(diag_misc)
 export(estimate_bvar_mn)
-export(estimate_ghosh_mn)
 export(estimate_har)
+export(estimate_mn_flat)
 export(estimate_var)
 export(forecast_bvarghosh)
 export(forecast_bvarmn)
@@ -102,6 +106,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(magrittr,"%>%")
 importFrom(mniw,rmniw)
+importFrom(mniw,rwish)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(tibble,rownames_to_column)
