--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(AIC,varlse)
 S3method(BIC,varlse)
+S3method(FPE,varlse)
 S3method(HQ,varlse)
 S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
@@ -54,6 +55,7 @@ export(bvar_flat)
 export(bvar_minnesota)
 export(bvar_mixture)
 export(bvhar_minnesota)
+export(choose_var)
 export(compute_cov)
 export(concatenate_colnames)
 export(diag_misc)
@@ -86,12 +88,16 @@ export(kroneckerprod)
 export(minnesota_prior)
 export(scale_har)
 export(stableroot)
+export(tAA_eigen)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(foreach,"%do%")
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
