add examples and author in varlse document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(summary,varlse)
 export("%>%")
 export()
 export(AAt_eigen)
+export(AtAit_eigen)
 export(FPE)
 export(HQ)
 export(VARtoVMA)
