approximate var forecast mse covariance matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(bvar_mixture)
 export(bvhar_minnesota)
 export(choose_var)
 export(compute_cov)
+export(compute_covmse)
 export(concatenate_colnames)
 export(diag_misc)
 export(estimate_bvar_mn)
