--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,6 @@ export(estimate_var)
 export(forecast_bvarghosh)
 export(forecast_bvarmn)
 export(forecast_bvharmn)
-export(forecast_region)
 export(forecast_var)
 export(forecast_vhar)
 export(gen_posterior)
@@ -110,6 +109,7 @@ importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(magrittr,"%>%")
