draw var ci autoplot and make mse evaluation function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
     tidyr,
     tibble,
     dplyr,
-    foreach
+    foreach,
+    purrr
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
