--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(gen_posterior,bvarmn)
 S3method(is.stable,varlse)
+S3method(mse,predbvhar)
 S3method(predict,bvarghosh)
 S3method(predict,bvarmn)
 S3method(predict,bvharmn)
@@ -87,6 +88,7 @@ export(knit_print.varlse)
 export(knit_print.vharlse)
 export(kroneckerprod)
 export(minnesota_prior)
+export(mse)
 export(scale_har)
 export(stableroot)
 export(tAA_eigen)
@@ -94,6 +96,7 @@ export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(foreach,"%do%")
@@ -115,6 +118,7 @@ importFrom(ggplot2,labs)
 importFrom(magrittr,"%>%")
 importFrom(mniw,rmniw)
 importFrom(mniw,rwish)
+importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(tibble,rownames_to_column)
