--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -46,3 +46,5 @@ jobs:
       - name: Test coverage
         run: covr::codecov()
         shell: Rscript {0}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
