add computing mean average percentage error feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(gen_posterior,bvarmn)
 S3method(is.stable,varlse)
+S3method(mape,predbvhar)
 S3method(mse,predbvhar)
 S3method(predict,bvarghosh)
 S3method(predict,bvarmn)
@@ -87,6 +88,7 @@ export(knit_print.summary.varlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
 export(kroneckerprod)
+export(mape)
 export(minnesota_prior)
 export(mse)
 export(scale_har)
