--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -15,7 +15,6 @@ jobs:
     runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
     steps:
       - uses: actions/checkout@v2
 
@@ -46,4 +45,6 @@ jobs:
 
       - name: Test coverage
         run: covr::codecov()
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         shell: Rscript {0}
