add posterior of forecast bvarmn but the result is not accurate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(magrittr,"%>%")
+importFrom(mniw,riwish)
 importFrom(mniw,rmniw)
 importFrom(mniw,rwish)
 importFrom(purrr,reduce)
