compute forecast interval for vhar and bvhar minnesota

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(AtAit_eigen)
 export(FPE)
 export(HQ)
 export(VARtoVMA)
+export(VHARtoVMA)
 export(autolayer)
 export(autoplot)
 export(build_design)
@@ -61,6 +62,7 @@ export(bvhar_minnesota)
 export(choose_var)
 export(compute_cov)
 export(compute_covmse)
+export(compute_covmse_har)
 export(concatenate_colnames)
 export(diag_misc)
 export(estimate_bvar_mn)
