--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
