--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -44,5 +44,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov(token = ${{ secrets.CODECOV_TOKEN }})
+        run: covr::codecov(token = CODECOV_TOKEN)
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         shell: Rscript {0}
