--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,11 +1,9 @@
 on:
   push:
     branches:
-      - main
       - master
   pull_request:
     branches:
-      - main
       - master
 
 name: test-coverage
@@ -44,7 +42,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov(token = CODECOV_TOKEN)
+        run: covr::codecov()
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         shell: Rscript {0}
