--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,12 @@ S3method(HQ,varlse)
 S3method(autoplot,bvarmn)
 S3method(autoplot,minnesota)
 S3method(autoplot,predbvhar)
-S3method(coef,bvarghosh)
+S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
 S3method(coef,varlse)
 S3method(coef,vharlse)
-S3method(fitted,bvarghosh)
+S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
@@ -21,19 +21,19 @@ S3method(gen_posterior,bvarmn)
 S3method(is.stable,varlse)
 S3method(mape,predbvhar)
 S3method(mse,predbvhar)
-S3method(predict,bvarghosh)
+S3method(predict,bvarflat)
 S3method(predict,bvarmn)
 S3method(predict,bvharmn)
 S3method(predict,varlse)
 S3method(predict,vharlse)
-S3method(print,bvarghosh)
+S3method(print,bvarflat)
 S3method(print,bvarmn)
 S3method(print,bvharmn)
 S3method(print,predbvhar)
 S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
-S3method(residuals,bvarghosh)
+S3method(residuals,bvarflat)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
@@ -68,20 +68,20 @@ export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_mn_flat)
 export(estimate_var)
-export(forecast_bvarghosh)
 export(forecast_bvarmn)
+export(forecast_bvarmn_flat)
 export(forecast_bvharmn)
 export(forecast_var)
 export(forecast_vhar)
 export(gen_posterior)
-export(is.bvarghosh)
+export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharmn)
 export(is.predbvhar)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
-export(knit_print.bvarghosh)
+export(knit_print.bvarflat)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
 export(knit_print.predbvhar)
