--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(kroneckerprod)
 export(mape)
 export(minnesota_prior)
 export(mse)
+export(plot_loss)
 export(scale_har)
 export(stableroot)
 export(tAA_eigen)
@@ -114,6 +115,7 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
