add multivariate normal sampling with zero mean function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(minnesota_prior)
 export(mse)
 export(plot_loss)
 export(scale_har)
+export(sim_mgaussian)
 export(stableroot)
 export(tAA_eigen)
 export(var_lm)
