generate var and vhar process

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,9 @@ export(AAt_eigen)
 export(AtAit_eigen)
 export(FPE)
 export(HQ)
+export(VARcoeftoVMA)
 export(VARtoVMA)
+export(VHARcoeftoVMA)
 export(VHARtoVMA)
 export(autolayer)
 export(autoplot)
@@ -95,6 +97,8 @@ export(mse)
 export(plot_loss)
 export(scale_har)
 export(sim_mgaussian)
+export(sim_var)
+export(sim_vhar)
 export(stableroot)
 export(tAA_eigen)
 export(var_lm)
