simulate bvar and bvhar minnesota params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,8 @@ export(mse)
 export(plot_loss)
 export(scale_har)
 export(sim_mgaussian)
+export(sim_mncoef)
+export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
 export(stableroot)
