check in local machine and modify some lines and make split function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,13 +42,9 @@ S3method(stableroot,varlse)
 S3method(summary,varlse)
 export("%>%")
 export()
-export(AAt_eigen)
-export(AtAit_eigen)
 export(FPE)
 export(HQ)
-export(VARcoeftoVMA)
 export(VARtoVMA)
-export(VHARcoeftoVMA)
 export(VHARtoVMA)
 export(autolayer)
 export(autoplot)
@@ -64,8 +60,7 @@ export(choose_var)
 export(compute_cov)
 export(compute_covmse)
 export(compute_covmse_har)
-export(concatenate_colnames)
-export(diag_misc)
+export(divide_ts)
 export(estimate_bvar_mn)
 export(estimate_har)
 export(estimate_mn_flat)
@@ -90,7 +85,6 @@ export(knit_print.predbvhar)
 export(knit_print.summary.varlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
-export(kroneckerprod)
 export(mape)
 export(minnesota_prior)
 export(mse)
@@ -102,7 +96,6 @@ export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
 export(stableroot)
-export(tAA_eigen)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
@@ -115,6 +108,7 @@ importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
@@ -134,6 +128,9 @@ importFrom(mniw,rmniw)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
+importFrom(stats,cor)
+importFrom(stats,qnorm)
+importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 useDynLib(bvhar)
