add stable process simulation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ S3method(BIC,varlse)
 S3method(FPE,varlse)
 S3method(HQ,varlse)
 S3method(autoplot,bvarmn)
-S3method(autoplot,minnesota)
 S3method(autoplot,predbvhar)
+S3method(autoplot,summary.bvarmn)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
@@ -17,7 +17,6 @@ S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
-S3method(gen_posterior,bvarmn)
 S3method(is.stable,varlse)
 S3method(mape,predbvhar)
 S3method(mse,predbvhar)
@@ -30,6 +29,7 @@ S3method(print,bvarflat)
 S3method(print,bvarmn)
 S3method(print,bvharmn)
 S3method(print,predbvhar)
+S3method(print,summary.bvarmn)
 S3method(print,summary.varlse)
 S3method(print,varlse)
 S3method(print,vharlse)
@@ -39,6 +39,7 @@ S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
 S3method(stableroot,varlse)
+S3method(summary,bvarmn)
 S3method(summary,varlse)
 export("%>%")
 export()
@@ -70,7 +71,6 @@ export(forecast_bvarmn_flat)
 export(forecast_bvharmn)
 export(forecast_var)
 export(forecast_vhar)
-export(gen_posterior)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharmn)
@@ -82,6 +82,7 @@ export(knit_print.bvarflat)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
 export(knit_print.predbvhar)
+export(knit_print.summary.bvarmn)
 export(knit_print.summary.varlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
@@ -93,6 +94,8 @@ export(scale_har)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mnvhar_coef)
+export(sim_stable_var)
+export(sim_stable_vhar)
 export(sim_var)
 export(sim_vhar)
 export(stableroot)
@@ -133,5 +136,6 @@ importFrom(stats,qnorm)
 importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,str)
 useDynLib(bvhar)
 useDynLib(bvhar, .registration = TRUE)
