replace three geom functions with one function using layer list

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     tibble,
     dplyr,
     foreach,
-    purrr
+    purrr,
+    ggrepel
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
