--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(AIC,varlse)
 S3method(BIC,varlse)
 S3method(FPE,varlse)
 S3method(HQ,varlse)
+S3method(autolayer,predbvhar)
 S3method(autoplot,bvarmn)
 S3method(autoplot,predbvhar)
 S3method(autoplot,summary.bvarmn)
@@ -71,6 +72,7 @@ export(forecast_bvarmn_flat)
 export(forecast_bvharmn)
 export(forecast_var)
 export(forecast_vhar)
+export(geom_predbvhar)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharmn)
@@ -124,7 +126,13 @@ importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,last_plot)
+importFrom(ggplot2,layer)
+importFrom(ggplot2,scale_linetype_manual)
+importFrom(ggrepel,GeomLabelRepel)
+importFrom(ggrepel,geom_label_repel)
 importFrom(magrittr,"%>%")
 importFrom(mniw,riwish)
 importFrom(mniw,rmniw)
