--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,8 +35,7 @@ Imports:
     tibble,
     dplyr,
     foreach,
-    purrr,
-    ggrepel
+    purrr
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
