add non constant feature for vhar lm and make compatible with predict

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(compute_covmse_har)
 export(divide_ts)
 export(estimate_bvar_mn)
 export(estimate_har)
+export(estimate_har_none)
 export(estimate_mn_flat)
 export(estimate_var)
 export(forecast_bvarmn)
