remove usedynlib from each cpp roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(sim_vhar)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
+importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
@@ -142,5 +143,4 @@ importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,str)
-useDynLib(bvhar)
 useDynLib(bvhar, .registration = TRUE)
