--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: bvhar
 Type: Package
-Title: Bayesian VHAR model
+Title: Bayesian Vector HAR Model
 Version: 0.1.0
 Date: 2021-08-01
 Authors@R: 
     c(person(given = "Young Geun",
              family = "Kim",
              email = "dudrms33@g.skku.edu",
-             role = c("aut", "cre")),
+             role = c("aut", "cre", "cph")),
       person(given = "Changryong",
              family = "Baek",
              role = "ctb"))
@@ -20,8 +20,7 @@ Suggests:
     covr,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    tinytest
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
