change vignettes structures and pkgdown contents

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,135 +1,124 @@
 template:
   params:
-    bootswatch: cosmo
+    bootswatch: journal
 
-authors:
-  Young Geun Kim:
-    href: https://ygeunkim.github.io
-  Changryong Baek:
-    href: https://sites.google.com/view/crbaek
+development:
+  mode: auto
 
-# navbar:
-#   type: default
-#   left:
-#   - text: Reference
-#     href: reference/index.html
-#   - text: Vignettes
-#     menu:
-#     - text: VAR and VHAR
-#       href: articles/var.html
-#     - text: Introduction to BVAR
-#       href: articles/bvar.html
-#     - text: Introduction to BVHAR
-#       href: articles/bvhar.html
-#   - text: News
-#     href: news/index.html
-#   right:
-#     - icon: fa-github fa-lg
-#       href: https://github.com/ygeunkim/bvhar
+reference:
+- title: The bvhar package
+  desc: ~
+  contents:
+  - bvhar-package
+  
+- title: VAR
+  desc: >
+    Vector autoregressive model.
+  contents:
+  - var_lm
+  - summary.varlse
+  - build_y0
+  - build_design
+  - estimate_var
+  - choose_var
+  - VARtoVMA
+  - stableroot
+  - stableroot.varlse
+  - is.stable
+  - is.stable.varlse
 
-# reference:
-# - title: Vector autoregressive model
-#   contents:
-#   - var_lm
-#   - coef.varlse
-#   - residuals.varlse
-#   - fitted.varlse
-#   - is.varlse
-#   - is.stable.varlse
-#   - summary.varlse
-# 
-# - title: Vector heterogeneous autoregressive model
-#   contents:
-#   - vhar_lm
-#   - coef.vharlse
-#   - residuals.vharlse
-#   - fitted.vharlse
-#   - is.vharlse
-# 
-# - title: Bayesian VAR model
-#   contents:
-#   - bvar_minnesota
-#   - coef.bvarmn
-#   - residuals.bvarmn
-#   - fitted.bvarmn
-#   - is.bvarmn
-#   - summary.bvarmn
-#   - bvar_flat
-#   - coef.bvarflat
-#   - residuals.bvarflat
-#   - fitted.bvarflat
-#   - is.bvarflat
-#   
-# - title: Bayesian VHAR model
-#   contents:
-#   - bvhar_minnesota
-#   - coef.bvharmn
-#   - residuals.bvharmn
-#   - fitted.bvharmn
-#   - is.bvharmn
-# 
-# - title: Forecasting
-#   contents:
-#   - predict.varlse
-#   - predict.vharlse
-#   - predict.bvarmn
-#   - predict.bvarflat
-#   - predict.bvharmn
-#   - is.predbvhar
-#   - divide_ts
-#   - mse.predbvhar
-#   - mape.predbvhar
-# 
-# - title: Simulation
-#   contents:
-#   - sim_mncoef
-#   - sim_mnvhar_coef
-#   - sim_var
-#   - sim_vhar
-#   - sim_mgaussian
-# 
-# - title: Information criteria
-#   contents:
-#   - AIC.varlse
-#   - BIC.varlse
-#   - FPE.varlse
-#   - HQ.varlse
-#   - choose_var
-# 
-# - title: Plot
-#   contents:
-#   - autoplot.bvarmn
-#   - autoplot.predbvhar
-#   - autoplot.summary.bvarmn
-#   - geom_predbvhar
-#   - plot_loss
-#   
-# - title: Miscellaneous functions
-#   contents:
-#   - VARtoVMA
-#   - VHARtoVMA
-#   - build_design
-#   - build_xdummy
-#   - build_y0
-#   - build_ydummy
-#   - build_ydummy_bvhar
-#   - compute_cov
-#   - compute_covmse
-#   - compute_covmse_har
-#   - estimate_har
-#   - estimate_har_none
-#   - estimate_mn_flat
-#   - estimate_var
-#   - forecast_bvarmn
-#   - forecast_bvarmn_flat
-#   - forecast_bvharmn
-#   - forecast_var
-#   - forecast_vhar
-#   - scale_har
-#   - stableroot.varlse
-# 
-# - title: Data
-#   contents:
-#   - etf_vix
+- title: VHAR
+  desc: >
+    Vector heterogeneous autoregressive model.
+  contents:
+  - vhar_lm
+  - scale_har
+  - estimate_har
+  - estimate_har_none
+  - VHARtoVMA
 
+- title: BVAR
+  desc: >
+    Bayesian VAR model.
+  contents:
+  - bvar_minnesota
+  - summary.bvarmn
+  - build_ydummy
+  - build_xdummy
+  - minnesota_prior
+  - estimate_bvar_mn
+  - bvar_flat
+  - estimate_mn_flat
+
+- title: BVHAR
+  desc: >
+    Bayesian VHAR model.
+  contents:
+  - bvhar_minnesota
+  - build_ydummy_bvhar
+
+- title: Inference
+  desc: ~
+  contents:
+  - coef.varlse
+  - residuals.varlse
+  - fitted.varlse
+  - is.varlse
+  - compute_cov
+  - compute_covmse
+  - compute_covmse_har
+
+- title: Forecasting
+  desc: ~
+  contents:
+  - predict.varlse
+  - forecast_var
+  - predict.vharlse
+  - forecast_vhar
+  - predict.bvarmn
+  - forecast_bvarmn
+  - predict.bvarflat
+  - forecast_bvarmn_flat
+  - predict.bvharmn
+  - print.predbvhar
+  - forecast_bvharmn
+  - is.predbvhar
+  - divide_ts
+  - mse
+  - mse.predbvhar
+  - mape
+  - mape.predbvhar
+
+- title: Information criteria
+  desc: ~
+  contents:
+  - AIC.varlse
+  - BIC.varlse
+  - FPE
+  - FPE.varlse
+  - HQ
+  - HQ.varlse
+
+- title: Plots
+  desc: ~
+  contents:
+  - autoplot.bvarmn
+  - autoplot.summary.bvarmn
+  - geom_predbvhar
+  - autoplot.predbvhar
+  - plot_loss
+
+- title: Simulation
+  desc: ~
+  contents:
+  - sim_mgaussian
+  - sim_var
+  - sim_vhar
+  - sim_mncoef
+  - sim_mnvhar_coef
+
+- title: Data
+  desc: ~
+  contents:
+  - etf_vix
 
