simulate var and vhar model without constant term

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,9 @@ export(minnesota_prior)
 export(mse)
 export(plot_loss)
 export(scale_har)
+export(set_bvar)
+export(set_bvhar_har)
+export(set_bvhar_mn)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mnvhar_coef)
