change type to include mean and add bayes model specification functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,9 @@ Imports:
     tibble,
     dplyr,
     foreach,
-    purrr
+    purrr,
+    utils,
+    stats
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
