--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(predict,vharlse)
 S3method(print,bvarflat)
 S3method(print,bvarmn)
 S3method(print,bvharmn)
+S3method(print,bvharspec)
 S3method(print,predbvhar)
 S3method(print,summary.bvarmn)
 S3method(print,summary.varlse)
@@ -77,6 +78,7 @@ export(geom_predbvhar)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharmn)
+export(is.bvharspec)
 export(is.predbvhar)
 export(is.stable)
 export(is.varlse)
@@ -84,6 +86,7 @@ export(is.vharlse)
 export(knit_print.bvarflat)
 export(knit_print.bvarmn)
 export(knit_print.bvharmn)
+export(knit_print.bvharspec)
 export(knit_print.predbvhar)
 export(knit_print.summary.bvarmn)
 export(knit_print.summary.varlse)
@@ -95,8 +98,9 @@ export(mse)
 export(plot_loss)
 export(scale_har)
 export(set_bvar)
-export(set_bvhar_har)
-export(set_bvhar_mn)
+export(set_bvar_flat)
+export(set_bvhar)
+export(set_weight_bvhar)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mnvhar_coef)
@@ -140,6 +144,7 @@ importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
 importFrom(stats,qnorm)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
