add loglik method for varlse and vharlse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(is.stable,varlse)
+S3method(logLik,varlse)
+S3method(logLik,vharlse)
 S3method(mape,predbvhar)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
@@ -141,12 +143,14 @@ importFrom(ggplot2,last_plot)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_linetype_manual)
 importFrom(magrittr,"%>%")
+importFrom(mniw,dMNorm)
 importFrom(mniw,riwish)
 importFrom(mniw,rmniw)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
+importFrom(stats,logLik)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
