add loglik method for every class and add details in pkg document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,9 @@ S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
 S3method(is.stable,varlse)
+S3method(logLik,bvarflat)
+S3method(logLik,bvarmn)
+S3method(logLik,bvharmn)
 S3method(logLik,varlse)
 S3method(logLik,vharlse)
 S3method(mape,predbvhar)
