--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,10 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,last_plot)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_linetype_manual)
+importFrom(lifecycle,deprecate_soft)
+importFrom(lifecycle,deprecate_warn)
+importFrom(lifecycle,deprecated)
+importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
 importFrom(mniw,dMNorm)
 importFrom(mniw,riwish)
