compute density of matrix normal using its closed form instead of mniw

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,7 +165,6 @@ importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
-importFrom(mniw,dMNorm)
 importFrom(mniw,riwish)
 importFrom(mniw,rmniw)
 importFrom(purrr,reduce)
@@ -173,6 +172,7 @@ importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
 importFrom(stats,logLik)
+importFrom(stats,nobs)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
