can use stability function for other models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,11 @@ S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
+S3method(is.stable,bvarflat)
+S3method(is.stable,bvarmn)
+S3method(is.stable,bvharmn)
 S3method(is.stable,varlse)
+S3method(is.stable,vharlse)
 S3method(logLik,bvarflat)
 S3method(logLik,bvarmn)
 S3method(logLik,bvharmn)
@@ -61,7 +65,11 @@ S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
+S3method(stableroot,bvarflat)
+S3method(stableroot,bvarmn)
+S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
+S3method(stableroot,vharlse)
 S3method(summary,bvarmn)
 S3method(summary,varlse)
 S3method(summary,vharlse)
@@ -86,6 +94,7 @@ export(compute_cov)
 export(compute_covmse)
 export(compute_covmse_har)
 export(compute_dic)
+export(compute_stablemat)
 export(divide_ts)
 export(estimate_bvar_mn)
 export(estimate_har)
