--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,6 +26,7 @@ reference:
   - stableroot.varlse
   - is.stable
   - is.stable.varlse
+  - compute_stablemat
 
 - title: VHAR
   desc: >
@@ -119,6 +120,7 @@ reference:
 - title: Data
   desc: ~
   contents:
+  - etf_vix_raw
   - etf_vix
 
 - title: Other generic functions
