add oxfordman realized measure dataset again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
+S3method(split_coef,bvharmod)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
@@ -139,6 +140,7 @@ export(sim_mncoef)
 export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
+export(split_coef)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
