--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -122,6 +122,7 @@ reference:
   contents:
   - etf_vix_raw
   - etf_vix
+  - oxfordman
 
 - title: Other generic functions
   desc: ~
@@ -130,3 +131,4 @@ reference:
   - residuals.varlse
   - fitted.varlse
   - is.varlse
+  - split_coef
