--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,13 +164,13 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,last_plot)
 importFrom(ggplot2,layer)
-importFrom(ggplot2,scale_linetype_manual)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
