add error functions mase and mrae and mae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,10 @@ S3method(logLik,bvarmn)
 S3method(logLik,bvharmn)
 S3method(logLik,varlse)
 S3method(logLik,vharlse)
+S3method(mae,predbvhar)
 S3method(mape,predbvhar)
+S3method(mase,predbvhar)
+S3method(mrae,predbvhar)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
 S3method(predict,bvarmn)
@@ -126,8 +129,11 @@ export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
 export(knit_print.varlse)
 export(knit_print.vharlse)
+export(mae)
 export(mape)
+export(mase)
 export(minnesota_prior)
+export(mrae)
 export(mse)
 export(plot_loss)
 export(scale_har)
