fix some styles and add test data plot layer function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(forecast_bvarmn_flat)
 export(forecast_bvharmn)
 export(forecast_var)
 export(forecast_vhar)
+export(geom_eval)
 export(geom_predbvhar)
 export(is.bvarflat)
 export(is.bvarmn)
