change rk step of energy consumption data to only include weekdays

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -107,6 +107,7 @@ reference:
   - autoplot.summary.bvarmn
   - geom_predbvhar
   - autoplot.predbvhar
+  - geom_eval
   - plot_loss
 
 - title: Simulation
