--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(coef,bvharmn)
 S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
+S3method(compute_logml,bvarmn)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
@@ -93,11 +94,13 @@ export(build_ydummy_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
 export(bvhar_minnesota)
+export(choose_bvar)
 export(choose_var)
 export(compute_cov)
 export(compute_covmse)
 export(compute_covmse_har)
 export(compute_dic)
+export(compute_logml)
 export(compute_stablemat)
 export(divide_ts)
 export(estimate_bvar_mn)
@@ -151,6 +154,7 @@ export(split_coef)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
+importFrom(CholWishart,lmvgamma)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
@@ -191,6 +195,7 @@ importFrom(stats,BIC)
 importFrom(stats,cor)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
+importFrom(stats,optim)
 importFrom(stats,qnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
