compute bvhar marginal likelihood and add empirical bayes function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
 S3method(compute_logml,bvarmn)
+S3method(compute_logml,bvharmn)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
@@ -56,6 +57,7 @@ S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,bvarflat)
 S3method(print,bvarmn)
+S3method(print,bvharemp)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
@@ -95,6 +97,7 @@ export(bvar_flat)
 export(bvar_minnesota)
 export(bvhar_minnesota)
 export(choose_bvar)
+export(choose_bvhar)
 export(choose_var)
 export(compute_cov)
 export(compute_covmse)
@@ -125,6 +128,7 @@ export(is.varlse)
 export(is.vharlse)
 export(knit_print.bvarflat)
 export(knit_print.bvarmn)
+export(knit_print.bvharemp)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
