--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,7 +20,6 @@ reference:
   - build_y0
   - build_design
   - estimate_var
-  - choose_var
   - VARtoVMA
   - stableroot
   - stableroot.varlse
@@ -87,6 +86,13 @@ reference:
   - mase
   - mrae
 
+- title: Empirical Bayes
+  desc: ~
+  contents:
+  - compute_logml
+  - choose_bvar
+  - choose_bvhar
+
 - title: Information criteria
   desc: ~
   contents:
@@ -97,6 +103,7 @@ reference:
   - HQ
   - HQ.varlse
   - logLik.varlse
+  - choose_var
   - compute_dic
   - compute_dic.bvarmn
 
