--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,8 @@ importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,last_plot)
 importFrom(ggplot2,layer)
+importFrom(ggplot2,scale_colour_viridis_d)
+importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
