--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
 export(set_weight_bvhar)
+export(sim_matgaussian)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mnvhar_coef)
