simulate IW and MNIW distribution functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,9 +149,11 @@ export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
 export(set_weight_bvhar)
+export(sim_iw)
 export(sim_matgaussian)
 export(sim_mgaussian)
 export(sim_mncoef)
+export(sim_mniw)
 export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
@@ -160,7 +162,6 @@ export(stableroot)
 export(var_lm)
 export(vhar_lm)
 importFrom(CholWishart,lmvgamma)
-importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
