compute bvar and bvhar density using both coef and sig posterior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,8 +111,7 @@ export(estimate_har)
 export(estimate_har_none)
 export(estimate_mn_flat)
 export(estimate_var)
-export(forecast_bvarmn)
-export(forecast_bvarmn_flat)
+export(forecast_bvar)
 export(forecast_bvharmn)
 export(forecast_var)
 export(forecast_vhar)
@@ -195,7 +194,6 @@ importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
-importFrom(mniw,riwish)
 importFrom(mniw,rmniw)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
@@ -205,6 +203,7 @@ importFrom(stats,logLik)
 importFrom(stats,nobs)
 importFrom(stats,optim)
 importFrom(stats,qnorm)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
